--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,13 +13,13 @@ classifiers = [
   "Topic :: Text Processing :: Linguistic",
   "Typing :: Typed",
 ]
-authors = [{ name = "skewb1k" }]
+authors = [{ name = "skewb1k" }, { name = "nickshiro" }]
 requires-python = ">=3.10"
 license.text = "MIT"
 readme = "README.md"
 
 [project.urls]
-Homepage = "https://github.com/vietmpl/vie"
+Homepage = "https://github.com/vietmpl/tree-sitter-vie"
 
 [project.optional-dependencies]
 core = ["tree-sitter~=0.24"]
