--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 	},
 	"scripts": {
 		"install": "node-gyp-build",
+		"generate": "tree-sitter generate",
 		"prestart": "tree-sitter build --wasm",
 		"start": "tree-sitter playground",
 		"format": "biome check --write grammar.js",
