--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "tree-sitter-vie"
 description = "Vie grammar for tree-sitter"
-version = "0.1.0"
+version = "0.1.1"
 keywords = ["incremental", "parsing", "tree-sitter", "vie"]
 classifiers = [
   "Intended Audience :: Developers",
@@ -13,7 +13,7 @@ classifiers = [
   "Topic :: Text Processing :: Linguistic",
   "Typing :: Typed",
 ]
-authors = [{ name = "skewb1k" }, { name = "nickshiro" }]
+authors = [{ name = "nickshiro" },{ name = "skewb1k" }]
 requires-python = ">=3.10"
 license.text = "MIT"
 readme = "README.md"
