--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
 		"generate": "tree-sitter generate",
 		"prestart": "tree-sitter build --wasm",
 		"start": "tree-sitter playground",
-		"format": "biome check --write grammar.js",
-		"test": "node -v"
+		"fmt": "biome check --write grammar.js"
 	}
 }
