--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on:
     branches: [master]
     paths:
       - grammar.js
+      - package.json
+      - package-lock.json
       - src/**
       - test/**
       - bindings/**
@@ -12,6 +14,8 @@ on:
   pull_request:
     paths:
       - grammar.js
+      - package.json
+      - package-lock.json
       - src/**
       - test/**
       - bindings/**
