--- a/package.json
+++ b/package.json
@@ -55,6 +55,6 @@
 		"prestart": "tree-sitter build --wasm",
 		"start": "tree-sitter playground",
 		"format": "biome check --write grammar.js",
-		"test": "node --test bindings/node/*_test.js"
+		"test": "node -v"
 	}
 }
