--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,6 @@ name: CI
 
 on:
   push:
-    branches: [master]
     paths:
       - grammar.js
       - package.json
@@ -32,8 +31,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-14]
+        os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
-      - uses: actions/checkout@v5
-      - uses: tree-sitter/setup-action/cli@v2
-      - uses: tree-sitter/parser-test-action@v3
+      - name: Checkout repository
+        uses: actions/checkout@v5
+      - name: Setup tree-sitter
+        uses: tree-sitter/setup-action/cli@v2
+      - name: Run tests
+        uses: tree-sitter/parser-test-action@v3
