--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -1,12 +1,5 @@
 name: Fuzz Parser
-
-on:
-  push:
-    paths:
-      - src/scanner.c
-  pull_request:
-    paths:
-      - src/scanner.c
+on: [push, pull_request]
 
 jobs:
   fuzz:
