--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,21 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v5
+      - name: Setup Node.js
+        uses: actions/setup-node@v6
+      - name: Install dependencies
+        run: npm ci
+      - name: Run lint
+        run: npm run lint
+
   test:
     name: Test parser
+    needs: lint
     runs-on: ${{matrix.os}}
     strategy:
       fail-fast: false
@@ -20,3 +33,13 @@ jobs:
         uses: tree-sitter/setup-action/cli@v2
       - name: Run tests
         uses: tree-sitter/parser-test-action@v3
+
+  fuzz:
+    name: Fuzz parser
+    needs: lint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v5
+      - name: Run fuzzer
+        uses: tree-sitter/fuzz-action@v4
