--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
 		"node-gyp-build": "^4.8.4"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.2.5",
+		"@biomejs/biome": "2.3.8",
 		"prebuildify": "^6.0.1",
 		"tree-sitter-cli": "^0.25.10"
 	},
