ci: use tree-sitter version based on package.json

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"generate": "tree-sitter generate",
 		"prestart": "tree-sitter build --wasm",
 		"start": "tree-sitter playground",
+		"test": "tree-sitter test",
 		"lint": "biome check",
 		"fmt": "biome check --write"
 	}
