--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,17 +29,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v6
-      - name: Setup tree-sitter
-        uses: tree-sitter/setup-action/cli@v2
+      - name: Install dependencies
+        run: npm ci
       - name: Run tests
-        uses: tree-sitter/parser-test-action@v3
-
-  fuzz:
-    name: Fuzz parser
-    needs: lint
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v6
-      - name: Run fuzzer
-        uses: tree-sitter/fuzz-action@v4
+        run: npm run test
