--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,16 +3,33 @@ on: [push, pull_request]
 
 concurrency:
   group: ${{github.workflow}}-${{github.ref}}
-  cancel-in-progress: true
+  cancel-in-progress: ${{ github.event_name == 'pull_request' }}
 
 jobs:
-  lint:
+  verify-parser:
+    name: Verify generated parser
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v6
-      - name: Setup Node.js
-        uses: actions/setup-node@v6
+      - name: Install dependencies
+        run: npm ci
+      - name: Generate a parser
+        run: npm run generate
+      - name: Check for changes
+        run: |
+          if ! git diff --quiet; then
+            echo "The parser is out of date. Please run 'npm run generate' and commit the changes."
+            git --no-pager diff
+            exit 1
+          fi
+
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v6
       - name: Install dependencies
         run: npm ci
       - name: Run lint
@@ -20,7 +37,7 @@ jobs:
 
   test:
     name: Test parser
-    needs: lint
+    needs: [lint, verify-parser]
     runs-on: ${{matrix.os}}
     strategy:
       fail-fast: false
