--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Publish packages
+name: Release
 
 on:
   push:
@@ -14,15 +14,18 @@ jobs:
   npm:
     uses: tree-sitter/workflows/.github/workflows/package-npm.yml@main
     secrets:
-      NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+      NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
   crates:
     uses: tree-sitter/workflows/.github/workflows/package-crates.yml@main
     secrets:
-      CARGO_REGISTRY_TOKEN: ${{secrets.CARGO_REGISTRY_TOKEN}}
+      CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+
   pypi:
     uses: tree-sitter/workflows/.github/workflows/package-pypi.yml@main
     secrets:
-      PYPI_API_TOKEN: ${{secrets.PYPI_API_TOKEN}}
+      PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+
   github:
     needs: [npm, crates, pypi]
     uses: tree-sitter/workflows/.github/workflows/release.yml@main
