build: remove Node bindings

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,11 +11,6 @@ permissions:
   attestations: write
 
 jobs:
-  npm:
-    uses: tree-sitter/workflows/.github/workflows/package-npm.yml@main
-    secrets:
-      NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
   crates:
     uses: tree-sitter/workflows/.github/workflows/package-crates.yml@main
     secrets:
@@ -27,7 +22,7 @@ jobs:
       PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
 
   github:
-    needs: [npm, crates, pypi]
+    needs: [crates, pypi]
     uses: tree-sitter/workflows/.github/workflows/release.yml@main
     with:
       attestations: true
