--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "tree-sitter-vie",
 	"version": "0.2.4",
 	"description": "Vie grammar for tree-sitter",
+	"type": "module",
 	"repository": "https://github.com/vietmpl/tree-sitter-vie",
 	"license": "MIT",
 	"keywords": [
